@@ -4,7 +4,10 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import junit.framework.Test;
 
-/** @author lukas */
+/**
+ * @deprecated - Support for running JUnit tests stands deprecated as of TestNG <code>7.6.2</code>
+ */
+@Deprecated
 public class JUnit3TestRecognizer implements JUnitTestRecognizer {
 
   public JUnit3TestRecognizer() {}
