@@ -8,6 +8,10 @@ import org.testng.xml.XmlClass;
 import org.testng.xml.XmlTest;
 
 // NO JUnit specific code here to avoid runtime errors
+/**
+ * @deprecated - Support for running JUnit tests stands deprecated as of TestNG <code>7.6.2</code>
+ */
+@Deprecated
 public abstract class JUnitTestClass implements ITestClass {
 
   private List<ITestNGMethod> m_testMethods = Lists.newArrayList();
